@@ -20,6 +20,7 @@ Options:
 -c/--configuration FILENAME -- configuration file
 -n/--nodaemon -- run in the foreground (same as 'nodaemon true' in config file)
 -h/--help -- print this usage message and exit
+-v/--version -- print supervisord version number and exit
 -u/--user USER -- run supervisord as this user (or numeric uid)
 -m/--umask UMASK -- use this umask for daemon subprocess (default is 022)
 -d/--directory DIRECTORY -- directory to chdir to when daemonized
